force-app/main/default/objects/cgcloud__Smart_UI_Lightning_Settings__c/cgcloud__Smart_UI_Lightning_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Smart UI Lightning Settings</label>
</CustomObject>