force-app/main/default/objects/cgcloud__Smart_UI_Lightning_Settings__c/fields/cgcloud__Custom_Remote_Actions_Mapping_Class__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Remote_Actions_Mapping_Class__c</fullName>
    <label>Custom Remote Actions Mapping Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>