force-app/main/default/objects/cgcloud__Smart_UI_Lightning_Settings__c/fields/cgcloud__JSON_Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__JSON_Static_Resource_Name__c</fullName>
    <defaultValue>&apos;LightningComponentsDatasource&apos;</defaultValue>
    <inlineHelpText>Datasource File for Lightning Components</inlineHelpText>
    <label>JSON Static Resource Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>