force-app/main/default/objects/cgcloud__Smart_UI_Lightning_Settings__c/fields/cgcloud__Static_Metadata_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Static_Metadata_Static_Resource__c</fullName>
    <defaultValue>&quot;SmartUILCStaticAssets&quot;</defaultValue>
    <description>Static Resource to get the Static Metadata from.</description>
    <label>Static Metadata Static Resource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>