force-app/main/default/objects/cgcloud__Smart_UI_Lightning_Settings__c/fields/cgcloud__Use_Static_Metadata__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Use_Static_Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables/Disables the usage of pre-generated metadata for SmartUI</description>
    <label>Use Static Metadata</label>
    <type>Checkbox</type>
</CustomField>